--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "build:ui": "rm -rf build && cd ../part1 && npm run build --prod && cp -r build ../learn-react-part3-exer",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint": "^6.8.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.7",
     "mongoose-unique-validator": "^2.0.3",
